backend/api/tests/integration/resource/snapshots/integration__resource__curation__admin_comment-1.snap
---
source: tests/integration/resource/curation.rs
expression: body
---
{
  "resourceId": "d8067526-1518-11ed-87fa-ebaf880b6d9c",
  "fieldsDone": {
    "displayName": false,
    "language": false,
    "categories": false,
    "description": false,
    "ageRanges": false,
    "affiliations": false,
    "additionalResources": false
  },
  "curationStatus": "new",
  "comments": [],
  "reports": []
}
